<resources>
    <string name="app_name">Nkoyo</string>
    <string name="permission_is_importantT">This permission is important for this app. Please grant the permission.</string>
    <string name="permission_is_important">Permission is important for this app. Please grant the permission.</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="abort">Abort</string>
    <string name="get_started">Get Started</string>
    <string name="close">Close</string>
    <string name="toggle_flashlight">Toggle Flashlight</string>
    <string name="saved_photoS">Saved Photo</string>
    <string name="saved_photo">Saved Photo</string>
    <string name="backslash">backslash</string>
    <string name="prediction_one">Prediction 1</string>
    <string name="probability_one">Probability 1</string>
    <string name="inference_time">Inference Time</string>
    <string name="probability_three">Probability 3</string>
    <string name="prediction_three">Prediction 3</string>
    <string name="prediction_two">Prediction 2</string>
    <string name="probability_two">Probability 2</string>
    <string name="scale_button">Scale Button</string>
    <string name="undefined">......</string>
    <string name="developer_name">Inuikim Nkoyo</string>
    <string name="mat_no">18ck024212</string>
    <string name="developer_location">Developed in Covenant University, Nigeria.</string>
    <string name="options">options</string>
    <string name="records">Records</string>
    <string name="search_records">Search Records</string>
    <string name="read_more">Read more</string>
    <string name="component">Component</string>
    <string name="classifying">Classifying...</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="dark_mode_settings">Dark mode settings</string>
    <string name="dark_mode_config_light">Light</string>
    <string name="dark_mode_config_dark">Dark</string>
    <string name="dark_mode_config_follow_system">Follow System</string>
    <string name="dynamic_bottom_sheet">DynamicBottomSheet</string>
    <string name="minimize_button">button:minimize</string>
    <string name="maximize_button">button:maximize</string>
    <string name="read_more_button">button:read_more</string>
    <string name="bottom_sheet_compact">bottom_sheet:compact</string>
    <string name="circular_progress_indicator">circular_progress_indicator</string>
    <string name="large_and_medium_bottom_sheet">bottom_sheet:large_and_medium</string>
    <string name="close_button">button:close</string>
    <string name="flashlight_button">button:flashlight</string>
    <string name="flashlight_button_off">button:flashlight_off</string>
    <string name="flashlight_button_on">button:flashlight_on</string>
    <string name="get_started_button">button:get_started</string>
    <string name="close_capture_button">button:close_capture</string>
    <string name="close_web_view_button">button:close_webview</string>
    <string name="getting_started_dialog">dialog:getting_started</string>
    <string name="abort_button">button:abort</string>
    <string name="show_record_button">button:show_record</string>
    <string name="snapshot_button">button:snapshot</string>
    <string name="camera_flip_button">button:camera_flip</string>
    <string name="tap_to_start_classification">Tap to Start Classification</string>
    <string name="tap_to_minimize_sheet">Tap to Minimize Sheet</string>
</resources>